thesis: Rework section on RISC-V

--- a/thesis/sections/background.tex
+++ b/thesis/sections/background.tex
@@ -414,6 +414,7 @@ Additionally to that, there also are extensions to the architecture.
 MIPS allows to extend the architecture by user defined instructions, compressed instructions, enhanced media processing, enhanced geometry processing, smart card or object interaction, signal processing, multi threading, \gls{os} virtualization, vector arithmetic and an extensions aimed specifically at microcontrollers.
 
 \subsubsection{RISC-V}
+\label{sec:bg-riscv}
 
 RISC-V was originally presented in the technical report \textit{UCB/EECS-2011-62} by the University of California in May 2011 \cite{RiscVISA-org} and has undergone many changes since then.
 RISC-V's architectural specification is divided into two volumes: volume specifies 1 the base user-level \gls{isa} which is separated into several modules whereas volume 2 defines the privileged architecture and instruction set but still only is available as a draft.
