thesis: Rework section on RISC-V and MINRV8 completely

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -594,3 +594,10 @@
   publisher = {Springer},
   year      = {2013}
 }
+
+@Online{pyexpander,
+    title = {pyexpander documentation},
+    organization = {Helmholtz-Zentrum Berlin GmbH},
+    url = {http://pyexpander.sourceforge.net/},
+    urldate = {2019-12-18},
+}
