--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -80,6 +80,9 @@
 \newacronym{ecall}{ECALL}{environment call}
 \newacronym{ebreak}{EBREAK}{environment breakpoint}
 \newacronym{mret}{MRET}{machine trap return}
+\newacronym{auipc}{AUIPC}{add upper immediate to PC}
+\newacronym{srl}{SRL}{shift right logically}
+\newacronym{csrrw}{CSRRW}{atomic read/write word \gls{csr}}
 
 % timer and performance counting CSRs
 \newacronym{mtime}{mtime}{machine time}
@@ -112,6 +115,7 @@
 \newacronym{utval}{utval}{user trap value}
 
 \newacronym{pmpcfg}{pmpcfg}{phsyical memory protection configuration}
+\newacronym{pmpaddr}{pmpaddr}{phsyical memory protection address}
 \newacronym{pmacfg}{pmacfg}{phsyical memory attributes configuration}
 
 \sloppy
