thesis: Divide thesis into parts

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -178,12 +178,17 @@
 \pagestyle{plain}
 \setcounter{page}{1}
 
+\part{Introduction}
 \input{sections/introduction.tex}
 \input{sections/background.tex}
+
+\part{Main Part}
 \input{sections/risc-v.tex}
 \input{sections/model.tex}
 \input{sections/checking.tex}
 \input{sections/results.tex}
+
+\part{Reflection}
 \input{sections/discussion.tex}
 \input{sections/related.tex}
 \input{sections/conclusion.tex}
